app/assets/stylesheets/application.css
body {
  font-family: "Courier New";
  background-color: #d8d8d8;
}
a {
   color: inherit;
 }
 a:hover {
   color: #d8d8d8;
   text-decoration-line: none;
 }
.header {
  text-align: center;
}
.post_body_format {

}
div.about {
  font-size: 18px;
}
div.letter_section {
	font-size: 25px;
}
div.diamond_section {
	font-size: 20px;
}
div.rules_enum {
	font-size: 15px;
}
#img_1 {
  width: 900px;
  height: 506px;
  border-radius: 7px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  background: #2c2c2c;
  padding: 7px;
  border: 1px solid #999;
}

